--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,10 +1,18 @@
 ---
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-beeb426670553cd824c76b817db3a3fc.js
-application/index.js: application-beeb426670553cd824c76b817db3a3fc.js
-application.css: application-dce535f9b929b415f3ab85182fde900a.css
-application/index.css: application-dce535f9b929b415f3ab85182fde900a.css
+application.js: application-0a53f156702eced973cb493a483014d0.js
+application/index.js: application-0a53f156702eced973cb493a483014d0.js
+application.css: application-5105578c0af99a88e74605b598cdc171.css
+application/index.css: application-5105578c0af99a88e74605b598cdc171.css
+twitter/bootstrap/glyphicons-halflings-regular.eot: twitter/bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+twitter/bootstrap/glyphicons-halflings-regular/index.eot: twitter/bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
+twitter/bootstrap/glyphicons-halflings-regular.svg: twitter/bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+twitter/bootstrap/glyphicons-halflings-regular/index.svg: twitter/bootstrap/glyphicons-halflings-regular-8a0a941aafb8c48e709ca72675344c92.svg
+twitter/bootstrap/glyphicons-halflings-regular.ttf: twitter/bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+twitter/bootstrap/glyphicons-halflings-regular/index.ttf: twitter/bootstrap/glyphicons-halflings-regular-b5577a3f3fb089369af33ce56e196d02.ttf
+twitter/bootstrap/glyphicons-halflings-regular.woff: twitter/bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
+twitter/bootstrap/glyphicons-halflings-regular/index.woff: twitter/bootstrap/glyphicons-halflings-regular-0391150c52d1f65893d1d6b0d29fd0c9.woff
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
