--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,8 +1,20 @@
 ---
+avatar.png: avatar-0d466ba1ceab7dbdd0b75f31e1568e1b.png
+avatar/index.png: avatar-0d466ba1ceab7dbdd0b75f31e1568e1b.png
+hand.jpg: hand-b5542796f4f49aebb4779d04aa64f779.jpg
+hand/index.jpg: hand-b5542796f4f49aebb4779d04aa64f779.jpg
+i.jpg: i-8734d26bc912639e3ff055bdd45f3484.jpg
+i/index.jpg: i-8734d26bc912639e3ff055bdd45f3484.jpg
+icoin.jpg: icoin-c1d528beee2a3136f7a218f26b792720.jpg
+icoin/index.jpg: icoin-c1d528beee2a3136f7a218f26b792720.jpg
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-fed7e46980cf1d5901492345328f81a5.js
-application/index.js: application-fed7e46980cf1d5901492345328f81a5.js
+stock-photo.jpg: stock-photo-1e06a544b8a2c222646f73f0210a88aa.jpg
+stock-photo/index.jpg: stock-photo-1e06a544b8a2c222646f73f0210a88aa.jpg
+stock.jpg: stock-20a4222855f0468cdfedb06c91f660c0.jpg
+stock/index.jpg: stock-20a4222855f0468cdfedb06c91f660c0.jpg
+application.js: application-0a53f156702eced973cb493a483014d0.js
+application/index.js: application-0a53f156702eced973cb493a483014d0.js
 application.css: application-5105578c0af99a88e74605b598cdc171.css
 application/index.css: application-5105578c0af99a88e74605b598cdc171.css
 twitter/bootstrap/glyphicons-halflings-regular.eot: twitter/bootstrap/glyphicons-halflings-regular-e76f5a754ccf64843a118a8706df3f8c.eot
